--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -36,21 +36,22 @@
                         <span class="oi oi-plus" aria-hidden="true"></span> Discounts
                     </NavLink>
                 </div>
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="usersroles">
-                        <span class="oi oi-pulse" aria-hidden="true"></span> Roles
-                    </NavLink>
-                </div>
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="users">
-                        <span class="oi oi-account-login" aria-hidden="true"></span> Users
-                    </NavLink>
-                </div>
-               @* <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="Identity/Account/Register">
-                        <span class="oi oi-account-login" aria-hidden="true"></span> Add User
-                    </NavLink>
-                </div>*@
+
+                <AuthorizeView Context="roles" Roles="Administrator">
+                    <Authorized>
+                        <div class="nav-item px-3">
+                            <NavLink class="nav-link" href="usersroles">
+                                <span class="oi oi-pulse" aria-hidden="true"></span> Roles
+                            </NavLink>
+                        </div>
+                  
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="users">
+                            <span class="oi oi-account-login" aria-hidden="true"></span> Users
+                        </NavLink>
+                    </div>
+                      </Authorized>
+                </AuthorizeView>
             </Authorized>
         </AuthorizeView>
     </nav>
